Fix z-index values, finalize Navbar component Only thing that is left is to set isExpanded to false upon clicking the navbar Also a close button would be nice

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -124,5 +124,5 @@ h2 {
 }
 
 .Navbar::before {
-    @apply content-[''] absolute left-0 top-0 bg-navbar w-full h-full z-2;
+    @apply content-[''] fixed left-0 top-0 bg-navbar w-full h-full z-699;
 }
